skill alignment fixed

--- a/port-nav.css
+++ b/port-nav.css
@@ -27,10 +27,9 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
 }
 .front .text1 {
-  font-size: 50px;
+  font-size: 40px;
   color: rgb(250, 250, 209);
 }
 .front a {
@@ -40,7 +39,7 @@ nav {
 .front .yogisha {
   color: salmon;
 }
-.front .hello-part {
+.hello-part {
   font-size: 95px;
 }
 .front .web-part {
