--- a/skillsection.css
+++ b/skillsection.css
@@ -1,6 +1,5 @@
 .skill {
   width: 100%;
-  height: 100vh;
 }
 .skill-info {
   font-size: 26px;
